Fix misaligned search icon in image search dialog
Replace input-group and icons with the components from PF4-react.

--- a/src/ImageSearchModal.css
+++ b/src/ImageSearchModal.css
@@ -35,10 +35,6 @@
     border: 1px solid var(--pf-global--BorderColor--100);
 }
 
-.input-group > .input-group-addon {
-    align-items: center;
-}
-
 #search-image-dialog-waiting.spinner {
     margin-top: calc(50% - 32px);
 }
